--- a/att2/ClassLibrary/ClassLibrary.csproj
+++ b/att2/ClassLibrary/ClassLibrary.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataProcessing.cs" />
-    <Compile Include="Inp_OutTXT.cs" />
+    <Compile Include="Inp_Out.cs" />
     <Compile Include="ListsComparer.cs" />
     <Compile Include="DataGridViewUtils.cs" />
     <Compile Include="MessageBsc.cs" />
